--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ audio.play();
   <center>  <font size="5px">FOLLOW THE STEPS!</font><br></center>
   We are the Dev team, we have developed version 3.1.0 of Generator and we ask you to help us to make our work known.! Please share to continue<br>
    <p><font size="4px">1)Share with a Friend WhatsApp</p></font>
-<center><p><a href="https://wa.me/?text=The%20New%20Brawl%20Stars%20Way%20Get%20Free%20robux%20Link:%20http://bit.ly/gemgrab" target="blank"> <button class="btn-connect1" value="PLAY"  onclick="play()" >WhatsApp</button></a><br></p><br></centre>
+<center><p><a href="https://wa.me/?text=The%20New%20Brawl%20Stars%20Way%20Get%20Free%20robux%20Link:%20https://robloxgenerator.netlify.app/" target="blank"> <button class="btn-connect1" value="PLAY"  onclick="play()" >WhatsApp</button></a><br></p><br></centre>
  <!--- <center><p><div class="fb-share-button" data-href="https://gemgrab.vip" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgemgrab.vip;src=sdkpreparse" class="fb-xfbml-parse-ignore"> <button class="btn-connect1" value="PLAY"  onclick="play()" >Facebook Share</button></a></div><br></p><br></centre>--->
  
  
